# Nabla-Asset-Module

./: README.md  nam.cmake
.github/workflows/: pages.yml  smoke.yml
cmake/: NablaAssetManifests.cmake  NablaAssetManifestsExternalDataFetch.cmake  NablaAssetManifestsExtract.cmake  NablaAssetManifestsMaterialize.cmake  NablaAssetManifestsPrepareRelease.cmake  README.md
smoke/: .gitignore  CMakeLists.txt
smoke/.nam-data/media/assets/mesh/standalone/ply/: Spanner-ply.ply.sha256  cube_ascii.ply.sha256  cube_binary.ply.sha256
smoke/.nam-data/media/assets/mesh/standalone/stl/: 00005640_b357e8687df34423a376a23f_trimesh_011.stl.sha256  00005999_c43c4fc6c6584eb8b872f15a_trimesh_001.stl.sha256  Spider_binary.stl.sha256  Stanford_Bunny.stl.sha256
smoke/ci/: verify_materialization.py
smoke/media/assets/mesh/standalone/ply/: gatech_dragon.ply.sha256  lucy.ply.sha256  xyzrgb_statuette.ply.sha256
smoke/media/assets/mesh/standalone/stl/: 00003281_f2ec2bcaa0184b049e1e8af9_trimesh_000.stl.sha256  00005760_e0f82256c529440487cff0a1_trimesh_001.stl.sha256  Spider_ascii.stl.sha256
